fix divider visible

--- a/src/renderer/parts/Split.css
+++ b/src/renderer/parts/Split.css
@@ -15,6 +15,9 @@
   top: 0;
   height:100%;
   flex-shrink: 0;
+  border-left: 1px solid rgba(255,255,255,0.09);
+  border-top: 1px solid rgba(255,255,255,0.09);
+  position: relative;
 }
 
 .split-vertical > .split-bar {
